docs/0.14/_sources/api/gammapy.modeling.models.PointSpatialModel.rst.txt
PointSpatialModel
=================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: PointSpatialModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~PointSpatialModel.evaluation_radius
      ~PointSpatialModel.frame
      ~PointSpatialModel.lat_0
      ~PointSpatialModel.lon_0
      ~PointSpatialModel.parameters
      ~PointSpatialModel.position
      ~PointSpatialModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~PointSpatialModel.__call__
      ~PointSpatialModel.copy
      ~PointSpatialModel.create
      ~PointSpatialModel.evaluate_geom
      ~PointSpatialModel.from_dict
      ~PointSpatialModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: evaluation_radius
   .. autoattribute:: frame
   .. autoattribute:: lat_0
   .. autoattribute:: lon_0
   .. autoattribute:: parameters
   .. autoattribute:: position
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate_geom
   .. automethod:: from_dict
   .. automethod:: to_dict
